--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,19 +26,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code below.\n",
-    "\n"
+    "%load_ext dotenv\n",
+    "%dotenv "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Igor\\miniconda3\\envs\\dsi_participant\\lib\\site-packages\\dask\\dataframe\\_pyarrow_compat.py:17: FutureWarning: Minimal version of pyarrow will soon be increased to 14.0.1. You are using 11.0.0. Please consider upgrading.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Igor\\AppData\\Local\\Temp\\ipykernel_26496\\676544213.py:1: DeprecationWarning: The current Dask DataFrame implementation is deprecated. \n",
+      "In a future release, Dask DataFrame will use new implementation that\n",
+      "contains several improvements including a logical query planning.\n",
+      "The user-facing DataFrame API will remain unchanged.\n",
+      "\n",
+      "The new implementation is already available and can be enabled by\n",
+      "installing the dask-expr library:\n",
+      "\n",
+      "    $ pip install dask-expr\n",
+      "\n",
+      "and turning the query planning option on:\n",
+      "\n",
+      "    >>> import dask\n",
+      "    >>> dask.config.set({'dataframe.query-planning': True})\n",
+      "    >>> import dask.dataframe as dd\n",
+      "\n",
+      "API documentation for the new implementation is available at\n",
+      "https://docs.dask.org/en/stable/dask-expr-api.html\n",
+      "\n",
+      "Any feedback can be reported on the Dask issue tracker\n",
+      "https://github.com/dask/dask/issues \n",
+      "\n",
+      "  import dask.dataframe as dd\n"
+     ]
+    }
+   ],
    "source": [
     "import dask.dataframe as dd"
    ]
@@ -62,8 +94,9 @@
     "import os\n",
     "from glob import glob\n",
     "\n",
-    "# Write your code below.\n",
-    "\n"
+    "PRICE_DATA = os.getenv(\"PRICE_DATA\")\n",
+    "\n",
+    "parquet_files = glob(os.path.join(PRICE_DATA, \"*/*.parquet\"))"
    ]
   },
   {
@@ -90,10 +123,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Igor\\AppData\\Local\\Temp\\ipykernel_26496\\2675210900.py:2: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
+      "  Before: .apply(func)\n",
+      "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
+      "  or:     .apply(func, meta=('x', 'f8'))            for series result\n",
+      "  dd_feat = (dd_px.groupby('ticker', group_keys=False).apply(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below.\n",
-    "\n"
+    "dd_px = dd.read_parquet(parquet_files).set_index(\"ticker\")\n",
+    "dd_feat = (dd_px.groupby('ticker', group_keys=False).apply(\n",
+    "    lambda x: x.assign(Close_lag_1 = x['Close'].shift(1))\n",
+    ").assign(\n",
+    "    returns = lambda x: x['Close']/x['Close_lag_1'] - 1\n",
+    ").assign(\n",
+    "    hi_lo_range = lambda x: (x['High'] - x['Low'])\n",
+    ").assign(\n",
+    "    rolling_avg_dd = lambda x: x['returns'].rolling(10).mean()\n",
+    "))"
    ]
   },
   {
@@ -109,12 +162,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Close_lag_1</th>\n",
+       "      <th>returns</th>\n",
+       "      <th>hi_lo_range</th>\n",
+       "      <th>rolling_avg_dd</th>\n",
+       "      <th>rolling_avg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ticker</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-02 00:00:00-05:00</td>\n",
+       "      <td>34.930990</td>\n",
+       "      <td>35.061644</td>\n",
+       "      <td>34.695808</td>\n",
+       "      <td>34.761135</td>\n",
+       "      <td>2039962</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.365836</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-03 00:00:00-05:00</td>\n",
+       "      <td>34.571688</td>\n",
+       "      <td>34.735011</td>\n",
+       "      <td>34.336506</td>\n",
+       "      <td>34.578220</td>\n",
+       "      <td>3462706</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.761135</td>\n",
+       "      <td>-0.005262</td>\n",
+       "      <td>0.398505</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-04 00:00:00-05:00</td>\n",
+       "      <td>34.519429</td>\n",
+       "      <td>35.166180</td>\n",
+       "      <td>34.441037</td>\n",
+       "      <td>35.002857</td>\n",
+       "      <td>3377288</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.578220</td>\n",
+       "      <td>0.012280</td>\n",
+       "      <td>0.725143</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-05 00:00:00-05:00</td>\n",
+       "      <td>34.852600</td>\n",
+       "      <td>35.146576</td>\n",
+       "      <td>34.702345</td>\n",
+       "      <td>34.950592</td>\n",
+       "      <td>2530939</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>35.002857</td>\n",
+       "      <td>-0.001493</td>\n",
+       "      <td>0.444231</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2013-12-06 00:00:00-05:00</td>\n",
+       "      <td>35.120459</td>\n",
+       "      <td>35.884796</td>\n",
+       "      <td>35.120459</td>\n",
+       "      <td>35.819469</td>\n",
+       "      <td>4268513</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>34.950592</td>\n",
+       "      <td>0.024860</td>\n",
+       "      <td>0.764337</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>2024-01-25 00:00:00-05:00</td>\n",
+       "      <td>127.913548</td>\n",
+       "      <td>128.386458</td>\n",
+       "      <td>126.642582</td>\n",
+       "      <td>128.297791</td>\n",
+       "      <td>1871700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>127.529305</td>\n",
+       "      <td>0.006026</td>\n",
+       "      <td>1.743877</td>\n",
+       "      <td>0.000828</td>\n",
+       "      <td>0.000828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>2024-01-26 00:00:00-05:00</td>\n",
+       "      <td>128.002213</td>\n",
+       "      <td>128.760851</td>\n",
+       "      <td>126.770665</td>\n",
+       "      <td>127.184464</td>\n",
+       "      <td>1157000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>128.297791</td>\n",
+       "      <td>-0.008678</td>\n",
+       "      <td>1.990186</td>\n",
+       "      <td>0.000115</td>\n",
+       "      <td>0.000115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>2024-01-29 00:00:00-05:00</td>\n",
+       "      <td>127.194317</td>\n",
+       "      <td>128.622910</td>\n",
+       "      <td>126.396261</td>\n",
+       "      <td>128.622910</td>\n",
+       "      <td>1482100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>127.184464</td>\n",
+       "      <td>0.011310</td>\n",
+       "      <td>2.226649</td>\n",
+       "      <td>0.001145</td>\n",
+       "      <td>0.001145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>2024-01-30 00:00:00-05:00</td>\n",
+       "      <td>128.435707</td>\n",
+       "      <td>129.283013</td>\n",
+       "      <td>127.667222</td>\n",
+       "      <td>128.691864</td>\n",
+       "      <td>1421500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>128.622910</td>\n",
+       "      <td>0.000536</td>\n",
+       "      <td>1.615791</td>\n",
+       "      <td>0.000672</td>\n",
+       "      <td>0.000672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YUM</th>\n",
+       "      <td>2024-01-31 00:00:00-05:00</td>\n",
+       "      <td>129.509619</td>\n",
+       "      <td>130.031795</td>\n",
+       "      <td>127.351944</td>\n",
+       "      <td>127.578560</td>\n",
+       "      <td>2154200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>128.691864</td>\n",
+       "      <td>-0.008651</td>\n",
+       "      <td>2.679850</td>\n",
+       "      <td>0.000370</td>\n",
+       "      <td>0.000370</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>118443 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Date        Open        High         Low  \\\n",
+       "ticker                                                                 \n",
+       "A      2013-12-02 00:00:00-05:00   34.930990   35.061644   34.695808   \n",
+       "A      2013-12-03 00:00:00-05:00   34.571688   34.735011   34.336506   \n",
+       "A      2013-12-04 00:00:00-05:00   34.519429   35.166180   34.441037   \n",
+       "A      2013-12-05 00:00:00-05:00   34.852600   35.146576   34.702345   \n",
+       "A      2013-12-06 00:00:00-05:00   35.120459   35.884796   35.120459   \n",
+       "...                          ...         ...         ...         ...   \n",
+       "YUM    2024-01-25 00:00:00-05:00  127.913548  128.386458  126.642582   \n",
+       "YUM    2024-01-26 00:00:00-05:00  128.002213  128.760851  126.770665   \n",
+       "YUM    2024-01-29 00:00:00-05:00  127.194317  128.622910  126.396261   \n",
+       "YUM    2024-01-30 00:00:00-05:00  128.435707  129.283013  127.667222   \n",
+       "YUM    2024-01-31 00:00:00-05:00  129.509619  130.031795  127.351944   \n",
+       "\n",
+       "             Close   Volume  Dividends  Stock Splits  year  Close_lag_1  \\\n",
+       "ticker                                                                    \n",
+       "A        34.761135  2039962        0.0           0.0  2013          NaN   \n",
+       "A        34.578220  3462706        0.0           0.0  2013    34.761135   \n",
+       "A        35.002857  3377288        0.0           0.0  2013    34.578220   \n",
+       "A        34.950592  2530939        0.0           0.0  2013    35.002857   \n",
+       "A        35.819469  4268513        0.0           0.0  2013    34.950592   \n",
+       "...            ...      ...        ...           ...   ...          ...   \n",
+       "YUM     128.297791  1871700        0.0           0.0  2024   127.529305   \n",
+       "YUM     127.184464  1157000        0.0           0.0  2024   128.297791   \n",
+       "YUM     128.622910  1482100        0.0           0.0  2024   127.184464   \n",
+       "YUM     128.691864  1421500        0.0           0.0  2024   128.622910   \n",
+       "YUM     127.578560  2154200        0.0           0.0  2024   128.691864   \n",
+       "\n",
+       "         returns  hi_lo_range  rolling_avg_dd  rolling_avg  \n",
+       "ticker                                                      \n",
+       "A            NaN     0.365836             NaN          NaN  \n",
+       "A      -0.005262     0.398505             NaN          NaN  \n",
+       "A       0.012280     0.725143             NaN          NaN  \n",
+       "A      -0.001493     0.444231             NaN          NaN  \n",
+       "A       0.024860     0.764337             NaN          NaN  \n",
+       "...          ...          ...             ...          ...  \n",
+       "YUM     0.006026     1.743877        0.000828     0.000828  \n",
+       "YUM    -0.008678     1.990186        0.000115     0.000115  \n",
+       "YUM     0.011310     2.226649        0.001145     0.001145  \n",
+       "YUM     0.000536     1.615791        0.000672     0.000672  \n",
+       "YUM    -0.008651     2.679850        0.000370     0.000370  \n",
+       "\n",
+       "[118443 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below.\n",
-    "\n"
+    "feat_df = dd_feat.compute()\n",
+    "feat_df['rolling_avg'] = feat_df['returns'].rolling(10).mean()\n",
+    "feat_df"
    ]
   },
   {
@@ -127,6 +479,13 @@
     "+ Would it have been better to do it in Dask? Why?\n",
     "\n",
     "(1 pt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No, it wasn't necessary to to convert to pandas to calculate the moving average return. It would have been better to do it in Dask, because it would speed up the calculation due to paralellization capabilities of Dask library. "
    ]
   },
   {
@@ -180,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
